module(name = "rules_k8s")

bazel_dep(name = "buildifier_prebuilt", version = "8.5.1", dev_dependency = True, repo_name = "buildtools")

bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "protobuf", version = "34.0.bcr.1")
bazel_dep(name = "rules_oci", version = "2.3.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

# Supported execution platforms for pre-built binaries.
# TODO: Figure out how to dedupe these lists with `private.bzl`.
execution_platforms = [
    "aarch64-linux",
    "aarch64-macos",
    "x86_64-linux",
    "x86_64-macos",
]

# https://github.com/kubernetes/kubernetes/releases
kubernetes_version = "1.35.2"

# To find the best-tested version of etcd for a given version of K8s,
# check the changelog, e.g.
# https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.35.md
etcd_version = "3.6.8"

# https://github.com/helm/helm/releases
helm_version = "4.1.3"

# https://github.com/kubernetes-sigs/gateway-api/releases
# Must be compatible with `envoy_gateway_version`: https://gateway.envoyproxy.io/news/releases/matrix/
gateway_api_version = "1.4.1"

# https://github.com/envoyproxy/gateway/releases
# Must be compatible with `gateway_api_version`: https://gateway.envoyproxy.io/news/releases/matrix/
# Must match `envoy_gateway_helm_digest`.
envoy_gateway_version = "1.7.1"

# https://hub.docker.com/r/envoyproxy/gateway-helm/tags
# Must match `envoy_gateway_version`.
envoy_gateway_helm_digest = "sha256:9c74b9b34f62d5627846e9a399fd67d044a70f7fe184d1022a27174fd2280454"

# https://quay.io/repository/jetstack/charts/cert-manager?tab=tags
cert_manager_helm_digest = "sha256:0ba58efe6e5b3f328f5aa6f688932833b3bc5af99b5b987c8086651217b572ad"

# https://github.com/kubernetes-sigs/external-dns/releases
# Use the Helm chart version (not the release version).
external_dns_helm_version = "1.20.0"

# https://github.com/kubernetes-sigs/kustomize/releases
kustomize_version = "5.8.1"

# https://github.com/kubernetes-sigs/cri-tools/releases
cri_tools_version = "1.35.0"

# https://github.com/kubernetes/kops/releases
kops_version = "1.34.1"

# https://github.com/operator-framework/operator-sdk/releases
operator_sdk_version = "1.42.1"

# https://github.com/kubernetes-sigs/controller-tools/releases
controller_tools_version = "0.20.1"

# https://github.com/kubernetes-sigs/kind/releases
kind_version = "0.31.0"

# https://github.com/kubernetes-sigs/cloud-provider-kind/releases
cloud_provider_kind_version = "0.10.0"

# https://github.com/oras-project/oras/releases
oras_version = "1.3.1"

# https://github.com/google/go-containerregistry/releases
crane_version = "0.21.2"

# https://github.com/fullstorydev/grpcurl/releases
grpcurl_version = "1.9.3"

# https://github.com/vimana-cloud/grpc/releases
grpc_plugins_version = "1.76.0"

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

k8s_platforms = {
    "aarch64-linux": "linux/arm64",
    "aarch64-macos": "darwin/arm64",
    "x86_64-linux": "linux/amd64",
    "x86_64-macos": "darwin/amd64",
}

[http_file(
    name = "kubectl.{}".format(exe_platform),
    executable = True,
    integrity = {
        "aarch64-linux": "sha384-SJlrWVCwHBpkt7URAHH/0gYbNq/EzZ8vh8W+sZTPT9ZtfcQ2fAMWbi8ktAyqUpEG",
        "aarch64-macos": "sha384-OVeSb3E4c31U/5A6YN8mzFeKueCA3f/+Z7MkUsIhco7MLOKc0OUHwGDace0Buwb3",
        "x86_64-linux": "sha384-Z5aThQ6Jpjx22f8mGUEkjtvPpTdn1gjvEZyFCU6HM5GLljJibQUCf+SusjNtKOp5",
        "x86_64-macos": "sha384-MtO0p6oI5P7dua/ki9jO3+is86yIsOX9raqTOdYS2nxdBD/tSdcJVV8DJ4WRAaq8",
    }[exe_platform],
    url = "https://dl.k8s.io/v{version}/bin/{platform}/kubectl".format(
        platform = k8s_platforms[exe_platform],
        version = kubernetes_version,
    ),
) for exe_platform in execution_platforms]

[http_file(
    name = "kube-apiserver.{}".format(exe_platform),
    executable = True,
    integrity = {
        "aarch64-linux": "sha384-IscAXC1BEBLdFs4N9MM+kDB+62EqL3L9ctT2KDdioJs+QMIDYBG/bvS9yDB6rSDS",
        "aarch64-macos": None,
        "x86_64-linux": "sha384-hCvNweSmRVBw3MLEyu/5mW64V0HgLWrzeSz8XatJZBX3h97XfggdpdeXH3eFDxXn",
        "x86_64-macos": None,
    }[exe_platform],
    url = "https://dl.k8s.io/v{version}/bin/{platform}/kube-apiserver".format(
        platform = k8s_platforms[exe_platform],
        version = kubernetes_version,
    ),
) for exe_platform in execution_platforms]

[http_archive(
    name = "etcd.{}".format(exe_platform),
    build_file_content = """
package(
    default_visibility = ["//visibility:public"],
)
alias(
    name = "etcd",
    actual = "etcd-v{version}-{platform}/etcd",
)
alias(
    name = "etcdctl",
    actual = "etcd-v{version}-{platform}/etcdctl",
)
alias(
    name = "etcdutl",
    actual = "etcd-v{version}-{platform}/etcdutl",
)
""".format(
        platform = {
            "aarch64-linux": "linux-arm64",
            "aarch64-macos": "darwin-arm64",
            "x86_64-linux": "linux-amd64",
            "x86_64-macos": "darwin-amd64",
        }[exe_platform],
        version = etcd_version,
    ),
    integrity = {
        "aarch64-linux": "sha384-HFqYkNwnk9JU+z7T6nXW37hQjUbhIs9ZQ07p8GAY53v8wzv+munlC2gANDGkv/po",
        "aarch64-macos": "sha384-a9rYWttd5jTsMqkXYcqLIjNomnM2MKsnaMhjpsovGxXjMk4L+VfzUTjoU6YREjpY",
        "x86_64-linux": "sha384-IBJTKZnG/1ukKusljd+QSsZbg4dTvbuFGYx/FiEwMWtrtN9kX0hmVlJtzvq/+9/P",
        "x86_64-macos": "sha384-ylWt2iCsemn2xOCLz/NaYckm6/eH7B1OCWJN3fnYw60tJzTrm5V99DrcG7PfGyTk",
    }[exe_platform],
    url = "https://github.com/etcd-io/etcd/releases/download/v{version}/etcd-v{version}-{platform}".format(
        platform = {
            "aarch64-linux": "linux-arm64.tar.gz",
            "aarch64-macos": "darwin-arm64.zip",
            "x86_64-linux": "linux-amd64.tar.gz",
            "x86_64-macos": "darwin-amd64.zip",
        }[exe_platform],
        version = etcd_version,
    ),
) for exe_platform in execution_platforms]

helm_platforms = {
    "aarch64-linux": "linux-arm64",
    "aarch64-macos": "darwin-arm64",
    "x86_64-linux": "linux-amd64",
    "x86_64-macos": "darwin-amd64",
}

[http_archive(
    name = "helm.{}".format(exe_platform),
    build_file_content = """
alias(
    name = "helm",
    actual = "{platform}/helm",
    visibility = ["//visibility:public"],
)
""".format(platform = helm_platforms[exe_platform]),
    integrity = {
        "aarch64-linux": "sha384-39GafTGMGM0prlXLqyYEuQCg5uWP2Q+A+Mg/yuygeu8PcXHC+ZUl+tqLdwqLwofi",
        "aarch64-macos": "sha384-UzoKOo/sMptp9ICJD+wkJmFRmUmT7C25mT/+mLMFqNJpkyDTgmi558PxCqZh4BBd",
        "x86_64-linux": "sha384-HmJPc6ICWva0aZsarqsy6puqKny57d6dCi0OfJdsX0sHXH06YdYo7qeQ0cwoLzD8",
        "x86_64-macos": "sha384-cR2zOvG0a2MFQJcblNww+kAPdpZIULvsJVKIn9fMQ/yb+eAGn/wXcrq0b1oR7Ikz",
    }[exe_platform],
    url = "https://get.helm.sh/helm-v{version}-{platform}.tar.gz".format(
        platform = helm_platforms[exe_platform],
        version = helm_version,
    ),
) for exe_platform in execution_platforms]

http_file(
    name = "cri-api",
    integrity = "sha384-8LJD4I4ofO62Yc+yEjqkqR3kjypdyocrpBuAMrrAo6pcMcHCBnGvjQhlMCnuflFA",
    url = "https://raw.githubusercontent.com/kubernetes/cri-api/refs/tags/kubernetes-{version}/pkg/apis/runtime/v1/api.proto".format(
        version = kubernetes_version,
    ),
)

http_file(
    name = "gateway-api-crds",
    integrity = "sha384-gxOzNOYf30QIv23bFgENuZ2zzAZLDacA4F1Rnr3S7bUmZDhwB7RPP0GiIOAuIfCD",
    url = "https://github.com/kubernetes-sigs/gateway-api/releases/download/v{version}/standard-install.yaml".format(
        version = gateway_api_version,
    ),
)

http_file(
    name = "envoy-gateway-crds",
    integrity = "sha384-SAQFuiYnqOmggyhbjNwXiCFPX1HTRoJx3psHJNL7WLc4eoFiSJsZaVwl9+JyrU/U",
    url = "https://github.com/envoyproxy/gateway/releases/download/v{version}/envoy-gateway-crds.yaml".format(
        version = envoy_gateway_version,
    ),
)

[http_archive(
    name = "kustomize.{}".format(exe_platform),
    build_file_content = """
exports_files(
    ["kustomize"],
    visibility = ["//visibility:public"],
)
""",
    integrity = {
        "aarch64-linux": "sha384-tihjRqOKA6KjpGbQXseFPyHFYYubH8FnGW1pSf4uK+W1plyhgt9VAQ8Afdpo76r0",
        "aarch64-macos": "sha384-agoGRlUQ3o8YrxU7aJm7loVKfLNvwfsxoKGix492L4QemH6Dg2o1UekBMIGGJc+F",
        "x86_64-linux": "sha384-xapYdoQXRkRrEhq2+R/cuL7UD01vroWMblPP1WT7xSVvxQZphCziskPjqaKc3T2Y",
        "x86_64-macos": "sha384-NWPmRCTdzIliy7QFFJADkIyx2nvsCOZhvEOQMqLloVUrilfvQmfnD4y0Zl9cJij2",
    }[exe_platform],
    url = "https://github.com/kubernetes-sigs/kustomize/releases/download/kustomize%2Fv{version}/kustomize_v{version}_{platform}.tar.gz".format(
        platform = {
            "aarch64-linux": "linux_arm64",
            "aarch64-macos": "darwin_arm64",
            "x86_64-linux": "linux_amd64",
            "x86_64-macos": "darwin_amd64",
        }[exe_platform],
        version = kustomize_version,
    ),
) for exe_platform in execution_platforms]

[http_archive(
    name = "crictl.{}".format(exe_platform),
    build_file_content = """
exports_files(
    ["crictl"],
    visibility = ["//visibility:public"],
)
""",
    integrity = {
        "aarch64-linux": "sha384-Nw/fUxiveYixbhGLGSsp6veAZ3qKsUVZw2njqNx10oMFYcrfE0sVydzLIeu8Fne+",
        "aarch64-macos": "sha384-SjyWVK8HndaT+Qv9G+ryketaK4iSu3mu6y0j7gYHbOcTOVqIfjUZK7RPUWz7I7Ta",
        "x86_64-linux": "sha384-aQiATTGT+2eFK0TR3Fj2HwyhxwQoWazlmSb0214AiVqVjdrSY0ASUD62F/1zQxRI",
        "x86_64-macos": "sha384-EUw0MRY5x5FGtzpXm7WFiKhs0Vw1z0N9dfqko/dFD7G1XBpfaUCGjxundNF02CgI",
    }[exe_platform],
    url = "https://github.com/kubernetes-sigs/cri-tools/releases/download/v{version}/crictl-v{version}-{platform}.tar.gz".format(
        platform = {
            "aarch64-linux": "linux-arm64",
            "aarch64-macos": "darwin-arm64",
            "x86_64-linux": "linux-amd64",
            "x86_64-macos": "darwin-amd64",
        }[exe_platform],
        version = cri_tools_version,
    ),
) for exe_platform in execution_platforms]

[http_file(
    name = "kops.{}".format(exe_platform),
    executable = True,
    integrity = {
        "aarch64-linux": "sha384-66f3DTHDxoriTbJUXeYkEJf1x0MbuIZpVCY21SFaRWoVektfxSlMTxfOmhkDMJAQ",
        "aarch64-macos": "sha384-VqVMCIgK+NldAH0l2ldHKaOvxSewjxvWuSU7bV2W+1XV0OgBKtRd5HhVTZHzERTL",
        "x86_64-linux": "sha384-VOvBxxH5Yp8sqMM2jcKlvbqwbJfHU1sskhvDMkkf9HrHscQvVD6ptpFNgTo9e126",
        "x86_64-macos": "sha384-C/AKz31bEjjvsx4s6gkjq85Lob4ymEwWtcIsuUadJGND+3ZujC/tRezLmMPZKYck",
    }[exe_platform],
    url = "https://github.com/kubernetes/kops/releases/download/v{version}/kops-{platform}".format(
        platform = {
            "aarch64-linux": "linux-arm64",
            "aarch64-macos": "darwin-arm64",
            "x86_64-linux": "linux-amd64",
            "x86_64-macos": "darwin-amd64",
        }[exe_platform],
        version = kops_version,
    ),
) for exe_platform in execution_platforms]

[http_file(
    name = "operator-sdk.{}".format(exe_platform),
    executable = True,
    integrity = {
        "aarch64-linux": "sha384-15MSeACbHnVcTjt7WHy48c65Yu1s3UysDlthgk9mY+ABfcQcRp4HeQYtyH+acGqZ",
        "aarch64-macos": "sha384-jh9AZTVpJSXgZcIzuQlcv2Ycmy4mcbl9NvFjtPkpTQkI5+M2azgMZJxZPr+Ef1Bl",
        "x86_64-linux": "sha384-h+wtrsoCO5kFhp6Ihsc++pTMpRvG4D1xZBFhUMJKonYjMON+8xeI26hGbTgX/gva",
        "x86_64-macos": "sha384-CqT2ydVZtK6x049uObRTmZtbMmekLfPe+W+5kldqFlfXiTFm8/Bws75BWt/77PfG",
    }[exe_platform],
    url = "https://github.com/operator-framework/operator-sdk/releases/download/v{version}/operator-sdk_{platform}".format(
        platform = {
            "aarch64-linux": "linux_arm64",
            "aarch64-macos": "darwin_arm64",
            "x86_64-linux": "linux_amd64",
            "x86_64-macos": "darwin_amd64",
        }[exe_platform],
        version = operator_sdk_version,
    ),
) for exe_platform in execution_platforms]

[http_file(
    name = "controller-gen.{}".format(exe_platform),
    executable = True,
    integrity = {
        "aarch64-linux": "sha384-sZcpsXQSZvgb2C0f3d6EIe/G0AtnLZtS9Ewz35XA0+hRhzh1keuuScxba84H52gD",
        "aarch64-macos": "sha384-MId/MpDmEHcjtLoNFVTrOVfScnNaSsjUa9BevccV/0BEw+QoA1ORf/rySDoC0YEq",
        "x86_64-linux": "sha384-9VpHbjQCMaawHQkLsJcN4K0NKjfRmabIz7ZJuAp3cbiqQJYE2l9hsD4AjUJ40Xgs",
        "x86_64-macos": "sha384-rDXgY8UfdeqJy+k0Kh83urGNHohi92Apj7TrzYSqmxlYp7TnDhT+qq7cgk418v1n",
    }[exe_platform],
    url = "https://github.com/kubernetes-sigs/controller-tools/releases/download/v{version}/controller-gen-{platform}".format(
        platform = {
            "aarch64-linux": "linux-arm64",
            "aarch64-macos": "darwin-arm64",
            "x86_64-linux": "linux-amd64",
            "x86_64-macos": "darwin-amd64",
        }[exe_platform],
        version = controller_tools_version,
    ),
) for exe_platform in execution_platforms]

[http_file(
    name = "kind.{}".format(exe_platform),
    executable = True,
    integrity = {
        "aarch64-linux": "sha384-5ZjjxFWIMT7E0J7HDIAakWrrczl/PgcPDP0ccPFspU7MCOesLXkamjzIDUmYd+Jt",
        "aarch64-macos": "sha384-bZtxNcJsg+oE4AwGRpykc/oBOgx31Uvxhk8mQAUHBO1XHtrxfHBOATix3NGoHXla",
        "x86_64-linux": "sha384-AqMpe+mfZH3hwU5OUStu+xIhPCf10KDVrQyDp7c4t3JUDAODg6HE8n21tH0r2AgM",
        "x86_64-macos": "sha384-sW63+D5t7ylcBTV0F4Al9aglUhsPQW0B4kvNuhXBG/hzUbrseHxId4MYTI+fl44b",
    }[exe_platform],
    url = "https://github.com/kubernetes-sigs/kind/releases/download/v{version}/kind-{platform}".format(
        platform = {
            "aarch64-linux": "linux-arm64",
            "aarch64-macos": "darwin-arm64",
            "x86_64-linux": "linux-amd64",
            "x86_64-macos": "darwin-amd64",
        }[exe_platform],
        version = kind_version,
    ),
) for exe_platform in execution_platforms]

[http_archive(
    name = "cloud-provider-kind.{}".format(exe_platform),
    build_file_content = """
exports_files(
    ["cloud-provider-kind"],
    visibility = ["//visibility:public"],
)
""",
    integrity = {
        "aarch64-linux": "sha384-bLF7ALJWe/96PbVaGv5AtCXfUwDlzarUQLi5PBPaGKwuE/hcUbUEiAeGxycLvPFF",
        "aarch64-macos": "sha384-qw7mCl88ts5ejFOM48Lul6r+xVEqprHNJVue0xnLI0W28U/pEXXfdg+rPT91/b8s",
        "x86_64-linux": "sha384-MraztFcfS2qKTbx+WkzcoW9yQAFlGcqiPRBHBm13IJ7Mu7mi6iPrtn+gppQTIB5b",
        "x86_64-macos": "sha384-QMesjiUobPscScDKij7rg5CUgSvPkVF1gbILeJBoOHAzG+hB9oz+x3E3thn27TVe",
    }[exe_platform],
    url = "https://github.com/kubernetes-sigs/cloud-provider-kind/releases/download/v{version}/cloud-provider-kind_{version}_{platform}.tar.gz".format(
        platform = {
            "aarch64-linux": "linux_arm64",
            "aarch64-macos": "darwin_arm64",
            "x86_64-linux": "linux_amd64",
            "x86_64-macos": "darwin_amd64",
        }[exe_platform],
        version = cloud_provider_kind_version,
    ),
) for exe_platform in execution_platforms]

[http_archive(
    name = "oras.{}".format(exe_platform),
    build_file_content = """
exports_files(
    ["oras"],
    visibility = ["//visibility:public"],
)
""",
    integrity = {
        "aarch64-linux": "sha384-SSUUL8DsdvYFmhPbYSPKP9YBmuarixNN2apZlCC7lsBojOYOWeKCHGN+m7xL/Dok",
        "aarch64-macos": "sha384-ju6x5+cxuFJ9IcyD29jDTp9ufdtJQWJ9d1qJLs8b6tTzw0Vk+tz4yMfGg+apOr27",
        "x86_64-linux": "sha384-9WJsVPn1id9JWVvi0XhKfsknnKOqhRSINW1xGNQaY3Md+ncCgsZ0SwSmyEjgUwFb",
        "x86_64-macos": "sha384-roFzRygY1+WIlm6tuezvmgMrxYjTnayNslDCM2D9DYm+QWjT3jRXgPnnvA5WcGyf",
    }[exe_platform],
    url = "https://github.com/oras-project/oras/releases/download/v{version}/oras_{version}_{platform}.tar.gz".format(
        platform = {
            "aarch64-linux": "linux_arm64",
            "aarch64-macos": "darwin_arm64",
            "x86_64-linux": "linux_amd64",
            "x86_64-macos": "darwin_amd64",
        }[exe_platform],
        version = oras_version,
    ),
) for exe_platform in execution_platforms]

[http_archive(
    name = "crane.{}".format(exe_platform),
    build_file_content = """
exports_files(
    ["crane"],
    visibility = ["//visibility:public"],
)
""",
    integrity = {
        "aarch64-linux": "sha384-neR5FdJZdTf/F5dNCdN4JnpS6R3t+6Fg8pNfdTdrXgt6sor87yaqhCWLHrsYHega",
        "aarch64-macos": "sha384-WO8f2zDIY/zEi4+9FhwaG5cZKH0DP74LsY53cSi1LBqc6i1G/SnzSbouwBBllwnS",
        "x86_64-linux": "sha384-TlXIAB88/0lGvLDe3zcyCymjUmSbPGM6RkzHGmG9Z9nO6SITN6ItYh1d+p65cQxc",
        "x86_64-macos": "sha384-kWSkAmr7JKG9m3bVnNfn5Gwzq8vG1+HHuRgLFB1GB98h09FDUyhTIyzFUX8tpbEA",
    }[exe_platform],
    url = "https://github.com/google/go-containerregistry/releases/download/v{version}/go-containerregistry_{platform}.tar.gz".format(
        platform = {
            "aarch64-linux": "Linux_arm64",
            "aarch64-macos": "Darwin_arm64",
            "x86_64-linux": "Linux_x86_64",
            "x86_64-macos": "Darwin_x86_64",
        }[exe_platform],
        version = crane_version,
    ),
) for exe_platform in execution_platforms]

[http_archive(
    name = "grpcurl.{}".format(exe_platform),
    build_file_content = """
exports_files(
    ["grpcurl"],
    visibility = ["//visibility:public"],
)
""",
    integrity = {
        "aarch64-linux": "sha384-LFA2ISyrKh1J9V/UxVLP2o0rcRxvqgI75Tb0luGSYrPWOK+AylMTpgCMx9cRncKn",
        "aarch64-macos": "sha384-htTLGgYUHnRm0PIYjmltlPEvG08KjORjC5Gq3R9b7XnreM79C8bagXPYwoI/yc3N",
        "x86_64-linux": "sha384-itN9NyTFw1ZsN4ZbQ6XKsDRTHgAA3YoLGq1dF2sq4aIh6mUyodtb3N/GgUSVOU4j",
        "x86_64-macos": "sha384-PU+zvkhBSMCbLmUIUwmpI83sRu+coN1/LkCauyxw5lGl5KcWCKfNJpnVccKTt2c2",
    }[exe_platform],
    url = "https://github.com/fullstorydev/grpcurl/releases/download/v{version}/grpcurl_{version}_{platform}.tar.gz".format(
        platform = {
            "aarch64-linux": "linux_arm64",
            "aarch64-macos": "osx_arm64",
            "x86_64-linux": "linux_x86_64",
            "x86_64-macos": "osx_x86_64",
        }[exe_platform],
        version = grpcurl_version,
    ),
) for exe_platform in execution_platforms]

[http_archive(
    name = "grpc-plugins.{}".format(exe_platform),
    build_file_content = """
exports_files(
    [
        "protoc-gen-grpc_cpp",
        "protoc-gen-grpc_csharp",
        "protoc-gen-grpc_node",
        "protoc-gen-grpc_objective_c",
        "protoc-gen-grpc_php",
        "protoc-gen-grpc_python",
        "protoc-gen-grpc_ruby",
    ],
    visibility = ["//visibility:public"],
)
""",
    integrity = {
        "aarch64-linux": "sha384-kTWiwecnkL0yM/sQ7DgsoTqUguD3cFNsw5Ys+5wGGvfTDsZrmiyfTfdQi3Ijd9wX",
        "aarch64-macos": "sha384-TJfBdrtCmtkqKjbOFBoZhD7RMuCihi9XIKvq/nmmmdijiTQW3rF7rJGoGCVzmW63",
        "x86_64-linux": "sha384-kWXOEcPex+emG5NwJMpuwgdYg2M/mZOvi+90DcJZCumarLgKyt6Nf2PToVWP+h12",
        "x86_64-macos": "sha384-68zmuhMUmxBktMpTRzFa6Jf0jxWaeprlZTdeEoB/NvRqN10Sm8XdALIx2j9zDAXt",
    }[exe_platform],
    url = "https://github.com/vimana-cloud/grpc/releases/download/v{version}/protoc-plugins-{platform}.tar.gz".format(
        platform = exe_platform,
        version = grpc_plugins_version,
    ),
) for exe_platform in execution_platforms]

# TODO: Use `http_archive` to download and extract.
#   https://github.com/helm/helm/issues/31844
http_file(
    name = "external-dns-helm-chart",
    integrity = "sha384-pfKzHGEwOh+i3LTLVS5BCg0kyIhxvqiMNmRMqVXiDB/sKp0++xb7F6onMuBlVjDN",
    url = "https://github.com/kubernetes-sigs/external-dns/releases/download/external-dns-helm-chart-{version}/external-dns-{version}.tgz".format(
        version = external_dns_helm_version,
    ),
)

oci.pull(
    name = "envoy-gateway-helm-image",
    digest = envoy_gateway_helm_digest,
    image = "docker.io/envoyproxy/gateway-helm",
)
oci.pull(
    name = "cert-manager-helm-image",
    digest = cert_manager_helm_digest,
    image = "quay.io/jetstack/charts/cert-manager",
)
use_repo(
    oci,
    "cert-manager-helm-image",
    "envoy-gateway-helm-image",
)
