load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("//:private.bzl", "execution_platforms")

# List of binaries supported on all 4 platforms: (Linux + Mac) × (x86-64 + Arm64).
# `{}` is a placeholder for the platform name. See `MODULE.bazel`.
binaries = [
    "@kubectl-{}//file",
    "@istio-{}//:istioctl",
    "@kustomize-{}//:kustomize",
    "@crictl-{}//:crictl",
    "@kops-{}//file",
    "@crane-{}//:crane",
]

# These binaries are only available on certain platforms,
# so hardcode all possible values.
hardcoded_binaries = [
    "@cni-plugins-x86_64-linux//:host-local",
    "@minikube-x86_64-linux//:minikube",
    "@minikube-x86_64-macos//:minikube",
]

# Download all remote files for all platforms
# to make sure the checksums are correct in MODULE.bazel.
build_test(
    name = "fetch-all-remotes",
    targets = [
        binary.format(platform)
        for binary in binaries
        for platform in execution_platforms
    ] + hardcoded_binaries,
)
